<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/KeywordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/keywordText"/>

        <TextView
            android:id="@+id/KeywordVali"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/Vali"
            android:textColor="@android:color/holo_red_light"
            android:visibility="gone"/>


        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/KeywordInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/enter_keyword"/>
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/CategoryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/CategorySpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"
                />

            <TextView
                android:id="@+id/DistanceText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/distance_in_miles" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/DistanceInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/enter_distance_default_10_miles"/>
            </android.support.design.widget.TextInputLayout>


        <TextView
            android:id="@+id/FromText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="From"
            android:textSize="15sp" />

        <RadioGroup
            android:id="@+id/FromRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp" >
            <RadioButton
                android:id="@+id/FromRadioButton0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_cur_loc"
                android:checked="true"/>
            <RadioButton
                android:id="@+id/FromRadioButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_oth_loc" />
        </RadioGroup>
        <TextView
            android:id="@+id/OthLocVali"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/Vali"
            android:textColor="@android:color/holo_red_light"
            android:visibility="gone"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <AutoCompleteTextView
                android:id="@+id/OthLocInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/type_in_the_location"
                android:enabled="false"/>
        </android.support.design.widget.TextInputLayout>
        <LinearLayout
            android:id="@+id/button_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/search_button"
                style="?android:textAppearanceSmall"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/SearchText"
                android:textStyle="bold" />

            <Button
                android:id="@+id/clear_button"
                style="?android:textAppearanceSmall"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/clear"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>